enum Direction {
  UP,
  DOWN,
}

export default Direction;
